--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,14 @@ h1 {
 .submit-btn:hover {
     background-color: #0056b3;
 }
+
+
+.fixed-top-link {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    background-color: #f1f1f1;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+}
