--- a/styles.css
+++ b/styles.css
@@ -2,22 +2,24 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Arial', sans-serif;
 }
 
 body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    /* height: 100vh; */
     background-color: #f9f9f9;
 }
 
 .container {
     width: 100%;
     max-width: 400px;
+    margin: 20px auto;
     padding: 20px;
     background-color: #fff;
+    box-sizing: border-box;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -114,3 +116,84 @@ h1 {
     border-radius: 5px;
     text-decoration: none;
 }
+ /* style for index.html */
+ 
+    body {
+        font-family: Arial, sans-serif;
+        line-height: 1.6;
+        color: #333;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+    }
+
+    h1, h2, h3 {
+        text-align: center;
+        color: #444;
+    }
+
+    /* .container {
+        width: 80%;
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #fff;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    } */
+
+    p {
+        margin: 10px 0;
+    }
+
+    ul {
+        margin: 20px 0;
+        padding: 0;
+        list-style-type: none;
+    }
+
+    ul li {
+        background-color: #e9ecef;
+        margin: 5px 0;
+        padding: 10px;
+        border-radius: 5px;
+    }
+
+    a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    a:hover {
+        text-decoration: underline;
+    }
+
+    .visually-hidden {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        padding: 0;
+        margin: -1px;
+        overflow: hidden;
+        clip: rect(0, 0, 0, 0);
+        border: 0;
+    }
+
+    footer {
+        text-align: center;
+        margin-top: 20px;
+        padding: 10px;
+        background-color: #444;
+        color: #fff;
+    }
+
+    footer a {
+        color: #fff;
+        text-decoration: none;
+    }
+
+    footer small {
+        display: block;
+        margin-top: 10px;
+    }
+    
