--- a/styles.css
+++ b/styles.css
@@ -197,3 +197,26 @@ h1 {
         margin-top: 10px;
     }
     
+
+    
+    /* style for table */
+
+    /* Add border to the table */
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 20px;
+    }
+
+    /* Add border and padding to table headers and cells */
+    th, td {
+        border: 1px solid black;
+        padding: 10px;
+        text-align: left;
+    }
+
+    /* Style the table headers */
+    th {
+        background-color: #f2f2f2;
+    }
+    
